# uk-osm-data-processor

./: .gitignore  01_setup_repo.sh  02_install_dependencies.sh  03_download_data.sh  04_setup_database.sh  05_import_data.sh  06_verify_import.sh  07_aerospace_pipeline.sh  07_pipeline_line.sh  07_pipeline_point.sh  07_pipeline_polygon.sh  07_pipeline_roads.sh  07_run_all_pipelines.sh  08_export_results.sh  0Claude_Master_scoring.sh  0Claude_setup_uk_osm_project.sh  0P_schema_modes_all_sample.sh  0Perplexity_filtering_pipeline.sh  AEROSPACE_SCORING_README.md  COMPLETE_WORKFLOW_GUIDE.md  CRITERIA_EFFECTS_GUIDE.md  GROQ_SETUP.md  README.md  SCORING_STRATEGY.md  SETUP_SUMMARY.md  VERIFICATION_AGENT_QUICKSTART.md  aerospace_master_workflow.sh  aerospace_verification_agent.py  all_tables_schema_modes_sampled.csv  backup_07_pipeline.sh  check.txt  check_db_queries.sql  column_mapper.py  compare_seed_columns.py  comprehensive_diagnostics.sql  create_final_table.sql  diagnose_pipeline.sql  diagnostic_output.txt  diagnostic_results.txt  diagnostic_test.sh  (+21 more)
aerospace_scoring/: README.md  assemble_sql.py  compute_aerospace_complete.sql  compute_aerospace_scores.sql  exclusions.sql  exclusions.yaml  generate_exclusions.py  generate_scoring.py  load_schema.py  negative_signals.yaml  run_aerospace_scoring.py  schema.json  scoring.sql  scoring.yaml  seed_columns.yaml  thresholds.yaml
backup_aerospace_scoring/: aerospace_columns.yaml  exclusions.sql  exclusions.yaml  generate_exclusions.py  load_schema.py  schema_summary.txt
config/: config.yaml  postgresql_optimized.conf  (+1 more)
(+18 files in other folders)
